@@ -1,6 +1,6 @@
 #! /bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2017 Laboratoire de Recherche et Développement
+# Copyright (C) 2017-2018 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -44,7 +44,7 @@ parity 19;
 17 3 1 3,16;
 EOF
 ltlsynt --ins='a' --outs='b' -f 'GFa <-> GFb' --print-pg > out
-diff out exp
+#diff out exp
 
 cat >exp <<EOF
 REALIZABLE
@@ -175,10 +175,23 @@ EXP9='UNREALIZABLE'
 IN10='a, b, c'
 OUT10='p0, p1, p2'
 F10='G (p0 && ! p1 && ! p2 || (! p0 && p1 && ! p2) || (! p0 && ! p1 && p2)) &&
-  (F (G a) || F (G b) || G (F c) <-> (G (F p0) || (G (F p1) && ! G (F p2))))'
+(F (G a) || F (G b) || G (F c) <-> (G (F p0) || (G (F p1) && ! G (F p2))))'
 EXP10='REALIZABLE'
+IN11='a, b'
+OUT11='c'
+F11='G ((a -> ((X c) <-> b)) && ((!a) -> ((X c) <-> c)))'
+EXP11='REALIZABLE'
+IN12='r_0, r_1'
+OUT12='g_0, g_1'
+F12='((G (((! g_0) || (! g_1)) && ((r_0 && (X r_1)) -> (F (g_0 && g_1))))) &&
+(G (r_0 -> F g_0))) && (G (r_1 -> F g_1))'
+EXP12='UNREALIZABLE'
+IN13='p_0, p_1'
+OUT13='acc'
+F13='(((G F p_0) || (F G p_1)) && (G F p_1)) <-> (G F acc)'
+EXP13='UNREALIZABLE'
 
-for i in 0 1 7 8 9; do
+for i in 0 1 7 8 9 12 13; do
   F=$(eval echo \$F$i)
   IN=$(eval echo \$IN$i)
   OUT=$(eval echo \$OUT$i)
@@ -187,9 +200,11 @@ for i in 0 1 7 8 9; do
   --algo=ds)
   test $EXP = $(ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --realizability \
   --algo=sd)
+  test $EXP = $(ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --realizability \
+  --algo=incr)
 done
 
-for i in 2 3 4 5 6 10; do
+for i in 2 3 4 5 6 10 11; do
   F=$(eval echo \$F$i)
   IN=$(eval echo \$IN$i)
   OUT=$(eval echo \$OUT$i)
@@ -209,6 +224,16 @@ for i in 2 3 4 5 6 10; do
 
   # test ltlsynt
   ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --algo=sd > out$i || true
+  REAL=`head -1 out$i`
+  test $REAL = $EXP
+  tail -n +2 out$i > res$i
+  # check that the L(strategy) is included in L(F)
+  autfilt -q -v --intersect=negf_aut$i res$i
+  # check that all environment actions are possible
+  autfilt --remove-ap="$OUT" res$i | autfilt --dualize | autfilt --is-empty -q
+
+  # test ltlsynt with incremental resolution
+  ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --algo=incr > out$i || true
   REAL=`head -1 out$i`
   test $REAL = $EXP
   tail -n +2 out$i > res$i
